# displayxr-demo-mediaplayer

./: .git-commit-msg.tmp  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  PRD.md  README.md  settings.gradle
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  audio_player.cpp  audio_player.h  lif_log_android.cpp  main.cpp  sbs_renderer.cpp  sbs_renderer.h  transport_ui.h  video_decoder.cpp  video_decoder.h
android/src/main/cpp/shaders/: overlay.frag  overlay.vert  sbs_ahb.frag
android/src/main/java/com/displayxr/mediaplayer_vk_android/: MainActivity.kt
android/src/main/res/values/: ic_launcher_background.xml
displayxr/: mediaplayer_handle_vk_win.displayxr.json
docs/: M0-KICKOFF.md  M5-NOTES.md
installer/: DisplayXRMediaPlayerInstaller.nsi  build-installer.bat
installer/macos/: Distribution.xml  build_installer.sh  create_app_bundle.sh
installer/macos/resources/: welcome.html
scripts/: build-ffmpeg-slim.sh  build_linux.sh  build_macos.sh  gen_font.py  gen_shaders.sh  make_idle_logo.py  run_mediaplayer_handle_vk_linux.sh  run_mediaplayer_handle_vk_macos.sh  run_mediaplayer_handle_vk_win.bat
shaders/: fullscreen.vert  sbs.frag  sbs_ycbcr.frag
src/: App.cpp  App.h  Log.cpp  Log.h  main.cpp
src/media/: AudioPlayer.cpp  AudioPlayer.h  FrameRing.h  ImageDecoder.cpp  ImageDecoder.h  LifLoader.cpp  LifLoader.h  MediaSource.cpp  MediaSource.h  VideoDecoder.cpp  VideoDecoder.h
src/platform/: Window.cpp  Window.h
src/rhi/: Font.h  Shaders.h  VulkanRenderer.cpp  VulkanRenderer.h
src/ui/: Hud.cpp  Hud.h  ImGuiLayer.cpp  ImGuiLayer.h  Ui.h
src/xr/: XrCommon.h  XrSession.cpp  XrSession.h
tests/: lif_roundtrip_test.cpp
windows/: resource.rc
